src/tess/tl/test/fail/test_fail_unknown_type_annotation.tl
// Unknown type name in a variable annotation should be rejected.
#module main

main() -> CInt {
    v: Quux := 42
    v
}
